# Wachdienst-Manager

./: .gitignore  CMakeLists.txt  README  README.md  application-icon.rc  resources.qrc
doc/: Doxyfile
doc/template/: footer.html  header.html  style.css
installer/installer/config/: config.xml
misc/: 99-userfonts.conf
misc/report-offline-template/: report-offline-template.tex
resources/icons/: create_icon.sh
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  auxil.cpp  auxil.h  boatdrive.cpp  boatdrive.h  boatlog.cpp  boatlog.h  databasecache.cpp  databasecache.h  databasecreator.cpp  databasecreator.h  main.cpp  newreportdialog.cpp  newreportdialog.h  newreportdialog.ui  pdfexporter.cpp  pdfexporter.h  person.cpp  person.h  personneldatabasedialog.cpp  personneldatabasedialog.h  personneldatabasedialog.ui  personneleditordialog.cpp  personneleditordialog.h  personneleditordialog.ui  qualificationchecker.cpp  qualificationchecker.h  report.cpp  report.h  reportwindow.cpp  reportwindow.h  reportwindow.ui  settingscache.cpp  settingscache.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  singleinstancesynchronizer.cpp  (+8 more)
